labs/101-openstack-lab/pod-labels1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod1
  labels:
    app: myapp
    env: production
spec:
  containers:
    - name: nginx
      image: nginx
