labs/101-openstack-lab/sa-nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: test-sa
spec:
  serviceAccountName: test-sa-pod
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
