labs/101-openstack-lab/matchLabels-myapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    matchLabels:
      app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
