labs/101-openstack-lab/myapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: myapp   # 이 레이블이 있는 파드만 선택
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
spec:
  selector:
    matchExpressions:
      - key: env
        operator: In
        values: ["production"]
