labs/101-openstack-lab/service-clusterip.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-multisvc
  labels:
    run: my-nginx
spec:
  ports:
  - name: normal
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: secure
    port: 82
    protocol: TCP
    targetPort: 8082
  - name: monitoring
    port: 83
    protocol: TCP
    targetPort: 8083
  clusterIP: 10.0.23.24
  type: NodePort
  selector:
    run: my-nginx
