labs/101-openstack-lab/svc-nginx-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
    version: blue
ports:
  - protocol: TCP
    port: 80
    targetPort: 80
